--- a/cursos/espanol/mlops/0_intro.ipynb
+++ b/cursos/espanol/mlops/0_intro.ipynb
@@ -5,9 +5,9 @@
    "id": "7ce7c733-ffa5-4bb0-8689-34290b3aadd9",
    "metadata": {},
    "source": [
-    "# Machine Learning Operations con Python\n",
+    "# Machine Learning Operations (MLOps) con Python\n",
     "\n",
-    "Lo que hay que saber para desarrollar apps de machine learning en python que funcionen en ambientes de produccion.\n",
+    "MLOps se refiere a lo que hay que saber para desarrollar apps de machine learning en python que funcionen en ambientes de produccion.\n",
     "\n",
     "En el [curso de programacion para Machine Learning](https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html) nos enfocamos en dos cuestiones fundamentales que son las [funciones](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6.1_funciones.ipynb) y los [tests](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6.2_funciones_ejercicios.ipynb). Estos dos conceptos nos dan la base para poder llevar nuestro codigo a produccion.\n",
     "\n",
@@ -16,165 +16,141 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4506b9fd-a892-4799-b07e-ea5a123efb54",
+   "id": "8ea061a8-75c1-4863-9b04-d9caa7d82908",
    "metadata": {},
    "source": [
-    "## Explicacion de instaladores, directorios virtuales y manejadores de librerias\n",
-    "- [An unbiased evaluation of environment management and packaging tools](https://alpopkes.com/posts/python/packaging_tools/)\n",
-    "- [Video](https://www.youtube.com/watch?v=sxN-Iu-okdo)\n",
+    "## Comandos de Linux:\n",
     "\n",
+    "Para realizar los ejercicios necesitamos ejecutar comandos de linux para ello podemos utilizar la consola de shell o terminal que se ve de la siguiente manera en nuestro ordenador:\n",
     "\n",
-    "### Directorios Virtuales (Virtual Environments)\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"./img/shell.png\" alt=\"consola shell\" width=\"500\"/>\n",
+    "</div>\n",
     "\n",
-    "Permiten crear directorios virtuales donde podemos instalar las librerias necesarias para un proyecto y que no generen conflicto con otras librerias de otros proyectos siempre que estos se encuentren en otros directorios virtuales.\n",
+    "Como en este curso trabajamos todo online en las maquinas virtuales que provee google a traves de [google colab](https://research.google.com/colaboratory/intl/es/faq.html) utilizaremos la instruccion `%%bash` al inicio de la celda para decir que el codigo siguiente no debe ser interpretado como codigo de python sino que debe ser interpretado como comandos de linux. De esta manera podemos utilizar las celdas de codigo como si fueran nuestra consola o terminal del ordenador."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "887ab8ed-fce9-4aa5-8638-a3568e9698dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0_intro.ipynb\n",
+      "1_package_managers.ipynb\n",
+      "2_functions_and_testing.ipynb\n",
+      "3_docker.ipynb\n",
+      "4_git.ipynb\n",
+      "5_etl_pipelines_frameworks.ipynb\n",
+      "\u001b[34mimg\u001b[m\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
     "\n",
-    "#### [venv](https://docs.python.org/3/library/venv.html)\n",
-    "\n",
-    "Comandos:\n",
-    "- `python -m venv <venv_path>`: crea el directorio virtual. ej:`python -m venv /mi_proyecto`\n",
-    "- `source <venv_path>/bin/activate`: activa el directorio virtual. ej:`source /mi_proyecto/bin/activate`\n",
-    "- `deactivate`: desactiva el directorio virtual\n",
-    "\n",
-    "#### [virtualenv](https://virtualenv.pypa.io/en/latest/)\n",
-    "\n",
-    "Comandos:\n",
-    "- `virtualenv <venv_path>`: crea el directorio virtual. ej:`virtualenv /mi_proyecto`\n",
-    "- `source <venv_path>/bin/activate`: activa el directorio virtual. ej:`source /mi_proyecto/bin/activate`\n",
-    "- `deactivate`: desactiva el directorio virtual\n",
-    "\n",
-    "### Versiones de Python\n",
-    "\n",
-    "\n",
-    "Estos permiten instalar distintas versiones de python en un mismo ordenador sin que haya conflictos y permite cambiar de version en version segun se necesite\n",
-    "\n",
-    "#### [pyenv](https://github.com/pyenv/pyenv)\n",
-    "\n",
-    "[Comandos](https://github.com/pyenv/pyenv/blob/master/COMMANDS.md):\n",
-    "- `pyenv install -l`: muestra una lista de las versiones de python instaladas\n",
-    "- [`pyenv install 3.10.4`]((https://github.com/pyenv/pyenv/blob/master/COMMANDS.md#pyenv-install)): instala una version especifica (3.10.4 en este caso)\n",
-    "- [`pyenv shell <version>`](https://github.com/pyenv/pyenv/blob/master/COMMANDS.md#pyenv-shell):selecciona la version de python para la sesion de shell actual\n",
-    "- [`pyenv local <version>`](https://github.com/pyenv/pyenv/blob/master/COMMANDS.md#pyenv-local): selecciona la version de python para el directorio actual\n",
-    "- [`pyenv global <version>`](https://github.com/pyenv/pyenv/blob/master/COMMANDS.md#pyenv-shell): selecciona la version de python globalmente para el usuario actual\n",
-    "\n",
-    "### Administradores de Librerias\n",
-    "\n",
-    "#### [pip](https://pip.pypa.io/en/stable/)\n",
-    "\n",
-    "pip es quizas el administrador de librerias mas conocido por los usuarios de python ya que puede instalar cualquier libreria del ecosistema [pypi que provee mas de 500k librerias](https://pypi.org/)\n",
-    "\n",
-    "Comandos:\n",
-    "\n",
-    "- [`pip install SomePackage`](https://pip.pypa.io/en/stable/user_guide/#installing-packages): instala la ultima version de la libreria SomePackage\n",
-    "- [`pip install SomePackage==1.0.4`](https://pip.pypa.io/en/stable/user_guide/#installing-packages): instala la version especificada de la libreria SomePackage\n",
-    "- [`pip uninstall SomePackage`](https://pip.pypa.io/en/stable/user_guide/#uninstalling-packages): desintala la libreria SomePackage\n",
-    "\n",
-    "\n",
-    "### Todo en uno\n",
-    "\n",
-    "Son programas que permiten realizar todas las funciones mencionadas anteriormente y mas. El mas conocido es Conda que permite crear directorios virtuales y ademas posee su propio instalador y ecosistema de librerias. Poetry y Rye estan ganando popularidad y Pixi es similar a Poetry pero incluye tambien el ecosistema de Conda. Como profesor recomiendo utilizar Poetry o Rye ya que son mas modernos y he visto a Conda generar muchos problemas, en caso de querer utilizar el ecosistema Conda \n",
-    "\n",
-    "\n",
-    "#### [Poetry](https://python-poetry.org/)\n",
-    "\n",
-    "[Comandos](https://python-poetry.org/docs/basic-usage/):\n",
-    "\n",
-    "- [`poetry new poetry-demo`](): crea un nuevo proyecto y su directorio virtual\n",
-    "- [`poetry add numpy`](): agrega una libreria al proyecto\n",
-    "- [`poetry install`](): instala las librerias\n",
-    "- [`poetry run python your_script.py`](): ejecuta el script dentro del directorio virtual\n",
-    "- [`poetry shell`](): activa el directorio virtual\n",
-    "- [`deactivate`](): desactiva el directorio virtual\n",
-    "\n",
-    "\n",
-    "#### [Rye](https://rye.astral.sh/)\n",
-    "\n",
-    "[Comandos](https://rye.astral.sh/guide/basics/):\n",
-    "\n",
-    "- [`rye init my-project`](): crea un nuevo proyecto, luego ingresamos con `cd my-project`\n",
-    "- [`rye init --script my-project`](): crea un nuevo proyecto ejecutable, luego ingresamos con `cd my-project`\n",
-    "- [`rye pin 3.10`](): establece la version de python\n",
-    "- [`rye sync`](): crea el directorio virtual y escribe el lock file\n",
-    "- [`rye add \"flask>=2.0\"`](): agrega una libreria y `rye sync` la instala\n",
-    "- [`rye remove flask`](): elimina una libreria\n",
-    "- [`rye run my-proyect`](): ejecuta el proyecto dentro del directorio virtual\n",
-    "- [`rye run jupyter lab`](): ejecuta ejecutables dentro del directorio virtual\n",
-    "- [`source ./bin/activate`](): activa el directorio virtual\n",
-    "- [`deactivate`](): desactiva el directorio virtual\n",
-    "\n",
-    "#### [Pixi](https://prefix.dev/)\n",
-    "\n",
-    "[Comandos](https://pixi.sh/latest/basic_usage/):\n",
-    "\n",
-    "- [`pixi init pixi-hello-world`](): crea un proyecto nuevo, luego ingresamos con `cd pixi-hello-world`\n",
-    "- [`pixi add numpy`](): instala librerias desde conda\n",
-    "- [`pixi add --pypi numpy`](): instala librerias desde pypi\n",
-    "- [`pixi run jupyter lab`](): ejecuta codigo dentro del directorio virtual del proyecto\n",
-    "\n",
-    "#### [Conda](https://docs.conda.io/en/latest/)\n",
-    "\n",
-    "[Comandos](https://docs.conda.io/projects/conda/en/stable/commands/index.html#conda-vs-pip-vs-virtualenv-commands):\n",
-    "\n",
-    "- [`conda create --name $ENVIRONMENT_NAME python`](https://docs.conda.io/projects/conda/en/stable/commands/env/create.html): crea un directorio virtual\n",
-    "- [`conda activate $ENVIRONMENT_NAME`](): activa el directorio virtual\n",
-    "- [`conda deactivate`](): desactiva el directorio virtual\n",
-    "- [`conda install $PACKAGE_NAME`](https://docs.conda.io/projects/conda/en/stable/commands/install.html): instala una libreria\n",
-    "- [`conda remove --name $ENVIRONMENT_NAME $PACKAGE_NAME`](): elimina una libreria\n"
+    "ls"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c3c6cb97",
+   "id": "9e08a159-33b6-44e1-8cdd-1d2229ab587c",
    "metadata": {},
    "source": [
-    "## Git\n",
+    "### Comandos utiles de linux\n",
     "\n",
-    "- [Tutorial](https://colab.research.google.com/drive/11EPXUjESxiT1RV6p1pkeKYS8PJFkRNpk)"
+    "Antes de empezar a usar las herramientas antes mencionadas veamos algunos comandos utiles de linux:\n",
+    "\n",
+    "#### Para directorios\n",
+    "\n",
+    "- `pwd` : nos dice en que directorio (path) estamos\n",
+    "- `mkdir` _dirname_ : crea un nuevo directorio\n",
+    "- `cd`  _dirname_ : cambia de directorio\n",
+    "\n",
+    "#### Para ficheros\n",
+    "\n",
+    "- `ls` : lista los ficheros\n",
+    "- `rm` _filename_ : elimina un fichero\n",
+    "- `mv` _filename1_ _filename2_ : cambia el path de un fichero\n",
+    "- `diff` _filename1_ _filename2_ : compara las diferencias de dos ficheros\n",
+    "- `cat` _filename(s)_ : muestra el contenido de uno o mas ficheros\n",
+    "- `which` : muestra el path de un comando\n",
+    "- `find [args]` : busca ficheros\n",
+    "- `echo` : escribe algo a la salida estandar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "be7a3849-b72c-4550-a6be-e985f859e57a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/hernanamiune/Documents/freecodingtour/cursos/espanol/mlops\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cedf149a-266a-4e42-8ea5-c40d2f576daa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/hernanamiune/Documents/freecodingtour/cursos/espanol/mlops/img\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "cd img\n",
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c5286e20-abe0-4362-86c5-0ff68ffee9ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/hernanamiune/Documents/freecodingtour/cursos/espanol/mlops\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "pwd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9e1f5aaa-9250-46a4-aa53-1be3b2b71b98",
+   "id": "c5fa9a3c-08b7-4db0-bd7f-3aa51d9b7ea6",
    "metadata": {},
    "source": [
-    "## Testing\n",
-    "\n",
-    "- https://colab.research.google.com/drive/1Rmk_5jEhuefqFavpDLtteGqE8-R1qmZv\n",
-    "- [Unit testing](https://docs.python.org/3/library/unittest.html)\n",
-    "- [PyTest](https://github.com/pytest-dev/pytest/)\n",
-    "- [Integracion continua con GitHub Actions](https://docs.github.com/es/enterprise-cloud@latest/actions/automating-builds-and-tests/building-and-testing-python)\n",
-    "- [Integracion continua con GitHub Actions En ingles](https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python)\n",
-    "- [Testing con Rye](https://rye.astral.sh/guide/commands/test/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5bc35de8",
-   "metadata": {},
-   "source": [
-    "## Docker\n",
-    "\n",
-    "- https://www.docker.com/play-with-docker/\n",
-    "- https://training.play-with-docker.com/\n",
-    "- https://labs.leaningtech.com/blog/mini-webvm-your-linux-box-from-dockerfile-via-wasm\n",
-    "\n",
-    "Optional:\n",
-    "- https://github.com/indigo-dc/udocker\n",
-    "- https://anvil.works/learn/tutorials/google-colab-web-service\n",
-    "- https://biplobsd.me/blogs/view/run-swirl-open-source-search-engine-on-google-colab.md"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "65288976",
-   "metadata": {},
-   "source": [
-    "## ETL Pipelines y Frameworks\n",
-    "\n",
-    "- https://news.ycombinator.com/item?id=40723356\n",
-    "- https://amphi.ai/\n",
-    "- https://dlthub.com/\n",
-    "- https://hub.meltano.com/\n",
-    "- https://www.definite.app/"
+    "Si solamente queremos escribir una sola linea de un comando de linux tambien podemos utilizar las siguientes sintaxis:\n",
+    "1. `!pip install numpy`"
    ]
   },
   {
