--- a/cursos/espanol/mlops/1_package_managers.ipynb
+++ b/cursos/espanol/mlops/1_package_managers.ipynb
@@ -120,6 +120,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "20ad64eb-083c-4f97-80a6-8edb74df341a",
+   "metadata": {},
+   "source": [
+    "## Debo usar esto en Google Colab?\n",
+    "\n",
+    "Debido a que Google Colab funciona en una maquina virtual, solo utilizaremos el instalador pip. El resto de las herramientas vistas aqui no son utiles en google colab pero si muy utiles si trabajamos en nuestro ordenar personal.\n",
+    "\n",
+    "### Que es una maquina virtual?\n",
+    "\n",
+    "Una maquina virtual es un ordenar creado temporalmente mediante software, entonces cada vez que iniciamos una notebook de colab (pestaña de colab en nuestro browser) se crea automaticamente un ordenador temporal completamente limpio con una version de python ya instalada y tambien varias librerias. Como cada pestaña de colab es un ordenar temporal distinto entonces no se van a generar conflictos entre ellos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3e909d40-8c94-4bb4-93d9-fe6b1dae7c61",
    "metadata": {},
    "source": [
