--- a/cursos/espanol/mlops/2_functions_and_testing.ipynb
+++ b/cursos/espanol/mlops/2_functions_and_testing.ipynb
@@ -5,12 +5,95 @@
    "id": "7ce7c733-ffa5-4bb0-8689-34290b3aadd9",
    "metadata": {},
    "source": [
-    "# Funciones y Testing\n",
+    "# Testing\n",
     "\n",
     "Como vimos en el [curso de programacion para Machine Learning](https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html) nos enfocamos en dos cuestiones fundamentales que son las [funciones](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6.1_funciones.ipynb) y los [tests](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6.2_funciones_ejercicios.ipynb). Estos dos conceptos nos dan la base para poder llevar nuestro codigo a produccion.\n",
     "\n",
-    "En esta unidad veremos como realizar tests de manera mas profesional."
+    "En esta unidad veremos como realizar tests de manera mas profesional.\n",
+    "\n",
+    "Para realizar tests python trae incluida la libreria [unitest](https://docs.python.org/3/library/unittest.html) pero aqui veremos la libreria mas moderna y completa llamada [pytest](https://github.com/pytest-dev/pytest/)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ecbeae7-129f-4379-beff-3d32bec39160",
+   "metadata": {},
+   "source": [
+    "## Instalar PyTest\n",
+    "\n",
+    "Primero instalaremos pytest y el complemento pytest-sugar que nos dara un resumen de los tests mas bonito y facil de leer\n",
+    "\n",
+    "`!pip -q install pytest pytest-sugar`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efba8d2d-48e9-4775-a992-9176a2aaf87e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip -q install pytest pytest-sugar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7069a43d-00df-4daa-afaa-7921cba22628",
+   "metadata": {},
+   "source": [
+    "## Como pytest descubre donde hemos escrito los tests\n",
+    "\n",
+    "PyTest usa la siguiente [convencion](https://docs.pytest.org/en/latest/goodpractices.html#conventions-for-python-test-discovery) para descubrir nuestros tests:\n",
+    "  \n",
+    "1. Busca los ficheros llamados `test_*.py` o `*_test.py `\n",
+    "2. Las funciones de test deben comenzar con `test_`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "190cc12d-2a93-4e61-bef7-35a0590ba14d",
+   "metadata": {},
+   "source": [
+    "### Creando los ficheros de test\n",
+    "\n",
+    "Como dijimos necesitamos crear ficheros llamados `test_*.py` o `*_test.py ` y para lograr esto en google colab utilizaremos `%%file mi_fichero_de_test.py` al comienzo de una celda. Cuando ejecutemos esta celda se creara un fichero con el contenido de esa celda. Si estas trabajando en tu ordenador solo crea el fichero con el editor de texto que mas te guste."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e603b166-0eda-4b50-8d4f-0c8207c6f5d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%file test_math.py\n",
+    "\n",
+    "import math\n",
+    "def test_suma():\n",
+    "    assert 1+1 == 2\n",
+    "\n",
+    "def test_multiplicacion():\n",
+    "    assert 6*7 == 42\n",
+    "\n",
+    "def test_funcion_seno():\n",
+    "    assert math.sin(0) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27ed870a-ee81-4d9f-b798-e557e66e83e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a072b0f-d385-4979-b2a3-5cbb634675e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
