--- a/cursos/espanol/mlops/1_package_managers.ipynb
+++ b/cursos/espanol/mlops/1_package_managers.ipynb
@@ -139,9 +139,16 @@
    "source": [
     "## Referencias:\n",
     "\n",
-    "- [An unbiased evaluation of environment management and packaging tools](https://alpopkes.com/posts/python/packaging_tools/)\n",
-    "- [Video](https://www.youtube.com/watch?v=sxN-Iu-okdo)"
+    "- [An unbiased evaluation of environment management and packaging tools.](https://alpopkes.com/posts/python/packaging_tools/) [(Video)](https://www.youtube.com/watch?v=sxN-Iu-okdo)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97905185-2c24-4da7-93cc-94861c502e80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
