--- a/cursos/espanol/deeplearning/llms/LLMs_Embeddings.ipynb
+++ b/cursos/espanol/deeplearning/llms/LLMs_Embeddings.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OpenAI Embeddings\n",
+    "# LLMs Embeddings and Vector Databases\n",
+    "\n",
+    "- [Visualizacion del Algoritmo HNSW](https://github.com/zilliztech/feder)\n",
+    "- [Alpaca + Mistral Nemo 12b Unsloth 2x faster finetuning](https://colab.research.google.com/drive/17d3U-CAIwzmbDRqbZ9NnpHxCkmXB6LZ0?usp=sharing)\n",
+    "- [How to Fine-Tune Llama 3 for Customer Service](https://symbl.ai/developers/blog/how-to-fine-tune-llama-3-for-customer-service/)\n",
+    "\n",
+    "Mas\n",
     "\n",
     "- [Using Embeddings](https://github.com/openai/openai-cookbook/blob/main/examples/Using_embeddings.ipynb)\n",
     "- [Embedding Wikipedia articles for search](https://github.com/openai/openai-cookbook/blob/main/examples/Embedding_Wikipedia_articles_for_search.ipynb)\n",
@@ -13,6 +19,13 @@
     "\n",
     "- [OpenAI Embeddings Utils](https://github.com/openai/openai-cookbook/blob/main/examples/utils/embeddings_utils.py)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
