--- a/cursos/espanol/deeplearning/llms/OpenAI_Assistants.ipynb
+++ b/cursos/espanol/deeplearning/llms/OpenAI_Assistants.ipynb
@@ -17,7 +17,7 @@
    "id": "3e49ef5f-a2a2-4eac-80f7-3b28bfb44369",
    "metadata": {},
    "source": [
-    "## OpenAI Functions\n",
+    "## OpenAI Tools\n",
     "\n",
     "Veamos como podemos darles estas herramientas a los LLMs. En OpenAI les llaman functions:"
    ]
@@ -56,14 +56,6 @@
     "    from google.colab import userdata\n",
     "    api_key = userdata.get('OPENAI_TOKEN')\n",
     "    openai.api_key = api_key"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51422385-9e51-43ac-b625-c42ba963eae7",
-   "metadata": {},
-   "source": [
-    "### OpenAI tools:"
    ]
   },
   {
