--- a/cursos/espanol/mlops/1_package_managers.ipynb
+++ b/cursos/espanol/mlops/1_package_managers.ipynb
@@ -12,6 +12,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e679b01-863e-4097-b33b-7be8fd7cf749",
+   "metadata": {},
+   "source": [
+    "## Resumen\n",
+    "\n",
+    "- Si solo vas a programar utilizando Google Colab instala las librerias que necesites todas juntas en una de las primeras celdas. Esto te servira para saber que configuracion necesitas a la hora de llevarlo a produccion.\n",
+    "\n",
+    "- Si vas a programar localmente en jupyter lab y necesitas instalar librerias desde Anaconda y desde PyPi puedes utilizar pixi y sera tan simple como hacer:\n",
+    "```bash\n",
+    "pixi init mi-proyecto\n",
+    "pixi add numpy\n",
+    "pixi add --pypi pandas\n",
+    "pixi run jupyter lab\n",
+    "```\n",
+    "\n",
+    "- Si solo necesitas librerias de PyPi puedes utilizar Poetry o Rye y todo sera mas simple y rapido.\n",
+    "\n",
+    "*Nota: no recomiendo usar conda porque he visto muchos problemas en los ordenadores de mis alumnos.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4506b9fd-a892-4799-b07e-ea5a123efb54",
    "metadata": {},
    "source": [
@@ -141,14 +163,6 @@
     "\n",
     "- [An unbiased evaluation of environment management and packaging tools.](https://alpopkes.com/posts/python/packaging_tools/) [(Video)](https://www.youtube.com/watch?v=sxN-Iu-okdo)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97905185-2c24-4da7-93cc-94861c502e80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
