MLOps Course First Draft

--- a/cursos/espanol/mlops/0_intro.ipynb
+++ b/cursos/espanol/mlops/0_intro.ipynb
@@ -58,6 +58,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff328bb6-d7bf-4c22-94ff-f0616edb1c20",
+   "metadata": {},
+   "source": [
+    "Para crear ficheros en google colab utilizaremos la instruccion `%%file nombre_fichero.txt`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "762b52e7-3e8a-4e23-9c46-4833c2d7a257",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%file mifichero.txt\n",
+    "\n",
+    "Hola este es el contenido de un fichero de texto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "408a0603-86ce-43ba-9ff9-deea4df4b9c9",
+   "metadata": {},
+   "source": [
+    "Recordemos que un fichero de texto puede contener codigo de python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e45eb9d0-87f1-4d72-b012-7a0cdfe18d45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%file miscriptdepython.txt\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print(\"Hola Mundo!!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9e08a159-33b6-44e1-8cdd-1d2229ab587c",
    "metadata": {},
    "source": [
@@ -120,7 +161,8 @@
    "source": [
     "%%bash\n",
     "\n",
-    "cd img\n",
+    "mkdir mi_proyecto\n",
+    "cd mi_proyecto\n",
     "pwd"
    ]
   },
@@ -150,17 +192,51 @@
    "metadata": {},
    "source": [
     "Si solamente queremos escribir una sola linea de un comando de linux tambien podemos utilizar las siguientes sintaxis:\n",
-    "1. `!pip install numpy`"
+    "1. `!cd mi_proyecto`\n",
+    "2. `%cd mi_proyecto`\n",
+    "\n",
+    "En el segundo el cambio de directorio quedara fijo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f57b433-e2e7-4065-8e35-64df16c3147f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd mi_proyecto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b7e6624-0c6e-4f0d-9347-4ca37cb83e57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "pwd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b0d5b287",
+   "id": "abbd9984-0e28-4812-974d-e9dc7b846210",
    "metadata": {},
    "source": [
-    "# Otros enlaces de interes:\n",
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/mlops/mlops.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0d7fdd1-c0ed-4473-8b46-d1d304757ae9",
+   "metadata": {},
+   "source": [
+    "# Referencias:\n",
     "\n",
-    "- https://harvard-edge.github.io/cs249r_book/"
+    "- [The Linux command line for beginners](https://ubuntu.com/tutorials/command-line-for-beginners)\n",
+    "- [101 Linux commands Open-source eBook](https://sugatoray.github.io/101-linux-commands-ebook/)"
    ]
   }
  ],
