--- a/cursos/espanol/mlops/1_package_managers.ipynb
+++ b/cursos/espanol/mlops/1_package_managers.ipynb
@@ -19,6 +19,14 @@
     "\n",
     "- Si solo vas a programar utilizando Google Colab instala las librerias que necesites todas juntas en una de las primeras celdas. Esto te servira para saber que configuracion necesitas a la hora de llevarlo a produccion.\n",
     "\n",
+    "- Si quieres utilizar solo las herramientas oficiales de Python utiliza `venv` y `pip` como recomienda esta [guia oficial](https://packaging.python.org/en/latest/guides/installing-using-pip-and-virtual-environments/):\n",
+    "```bash\n",
+    "python3 -m venv .venv\n",
+    "source .venv/bin/activate\n",
+    "python3 -m pip install --upgrade pip\n",
+    "python3 -m pip install pandas\n",
+    "```\n",
+    "\n",
     "- Si vas a programar localmente en jupyter lab y necesitas instalar librerias desde Anaconda y desde PyPi puedes utilizar pixi y sera tan simple como hacer:\n",
     "```bash\n",
     "pixi init mi-proyecto\n",
@@ -29,7 +37,7 @@
     "\n",
     "- Si solo necesitas librerias de PyPi puedes utilizar Poetry o Rye y todo sera mas simple y rapido.\n",
     "\n",
-    "*Nota: no recomiendo usar conda porque he visto muchos problemas en los ordenadores de mis alumnos.*"
+    "*Nota: no recomiendo usar conda porque he visto muchos problemas en los ordenadores de mis alumnos, sobre todo en combinacion con jupyter lab.*"
    ]
   },
   {
@@ -83,9 +91,11 @@
     "\n",
     "Comandos:\n",
     "\n",
-    "- [`pip install SomePackage`](https://pip.pypa.io/en/stable/user_guide/#installing-packages): instala la ultima version de la libreria SomePackage\n",
-    "- [`pip install SomePackage==1.0.4`](https://pip.pypa.io/en/stable/user_guide/#installing-packages): instala la version especificada de la libreria SomePackage\n",
-    "- [`pip uninstall SomePackage`](https://pip.pypa.io/en/stable/user_guide/#uninstalling-packages): desintala la libreria SomePackage\n",
+    "- [`python -m pip install SomePackage`](https://pip.pypa.io/en/stable/user_guide/#installing-packages): instala la ultima version de la libreria SomePackage\n",
+    "- [`python -m pip install SomePackage==1.0.4`](https://pip.pypa.io/en/stable/user_guide/#installing-packages): instala la version especificada de la libreria SomePackage\n",
+    "- [`python -m pip uninstall SomePackage`](https://pip.pypa.io/en/stable/user_guide/#uninstalling-packages): desintala la libreria SomePackage\n",
+    "- [`python -m pip freeze > requirements.txt`](https://pip.pypa.io/en/stable/cli/pip_freeze/): crear un fichero con todas las librerias instaladas\n",
+    "- [`python -m pip install -r requirements.txt`](https://pip.pypa.io/en/stable/cli/pip_freeze/): instala todas las librerias de un fichero creado por pip freeze\n",
     "\n",
     "\n",
     "### Todo en uno\n",
@@ -152,6 +162,14 @@
     "### Que es una maquina virtual?\n",
     "\n",
     "Una maquina virtual es un ordenar creado temporalmente mediante software, entonces cada vez que iniciamos una notebook de colab (pestaña de colab en nuestro browser) se crea automaticamente un ordenador temporal completamente limpio con una version de python ya instalada y tambien varias librerias. Como cada pestaña de colab es un ordenar temporal distinto entonces no se van a generar conflictos entre ellos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfdf3929-8c77-4e9f-b012-b4973f64eb87",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/mlops/mlops.html)"
    ]
   },
   {
