--- a/cursos/espanol/mlops/2_functions_and_testing.ipynb
+++ b/cursos/espanol/mlops/2_functions_and_testing.ipynb
@@ -691,6 +691,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f32b933e-fa5c-4822-8e3a-11a5cfe6e243",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/mlops/mlops.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9e1f5aaa-9250-46a4-aa53-1be3b2b71b98",
    "metadata": {
     "id": "9e1f5aaa-9250-46a4-aa53-1be3b2b71b98"
@@ -705,14 +713,6 @@
     "- [Integracion continua con GitHub Actions En ingles](https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python)\n",
     "- [Testing con Rye](https://rye.astral.sh/guide/commands/test/)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43844b5e-b5a4-4cbe-95f7-2752a003c783",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
