--- a/cursos/espanol/mlops/3_docker.ipynb
+++ b/cursos/espanol/mlops/3_docker.ipynb
@@ -126,12 +126,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60e93d67-8afa-4363-8d34-c0b8da65f41b",
+   "cell_type": "markdown",
+   "id": "132d7907-fc96-4f3d-ac61-1827cd3ac2c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/mlops/mlops.html)"
+   ]
   },
   {
    "cell_type": "markdown",
